[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = ""
authors = ["FrostEasy54 <frosteasy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
