[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = ""
authors = ["FrostEasy54 <frosteasy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.3.4"

[tool.ruff]
line-length=79
target-version = 'py311'

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "E4",
  "E7",
  "E9",
  # isort
  "I",
  # pep8-naming
  "N",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
